--- a/.env.example
+++ b/.env.example
@@ -67,5 +67,6 @@ MEILISEARCH_HOST=http://meilisearch:7700
 WWWGROUP=1000
 WWWUSER=1000
 
-ADMIN_USERNAME=blek!
+ADMIN_LOGIN=blek!
 ADMIN_PASSWORD=123
+ADMIN_MAIL=me@blek.codes
