--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.9",
         "@vitejs/plugin-react": "^2.1.0",
+        "formik": "^2.2.9",
+        "jquery": "^3.6.1",
         "react": "^18.2.0",
+        "react-cookie": "^4.1.1",
         "react-dom": "^18.2.0",
         "react-localization": "^1.0.19"
     }
