--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@emotion/styled": "^11.10.4",
         "@mui/material": "^5.10.9",
         "@vitejs/plugin-react": "^2.1.0",
+        "copy-to-clipboard": "^3.3.2",
         "formik": "^2.2.9",
         "jquery": "^3.6.1",
         "react": "^18.2.0",
