--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=blek! ID
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://id.blek.codes
 APP_LOCALE=en
 APP_VERSION=1.0
 
-APP_AVAILABLE=false
+APP_AVAILABLE=true
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -20,7 +20,7 @@ DB_USERNAME=blek
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=database
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -68,5 +68,5 @@ WWWGROUP=1000
 WWWUSER=1000
 
 ADMIN_LOGIN=blek!
-ADMIN_PASSWORD=123
-ADMIN_MAIL=me@blek.codes
+ADMIN_PASSWORD=1234
+ADMIN_MAIL=admin@id.blek.codes
