--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-APP_NAME=blek! ID
+APP_NAME=blekID
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://id.blek.codes
 APP_LOCALE=en
 APP_VERSION=1.0
+ASSET_URL=https://id.blek.codes
 
 APP_AVAILABLE=true
 
