--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
     
-    laravel.test:
+    sail:
         restart: always
         build:
             context: ./vendor/laravel/sail/runtimes/8.1
